'update views and db'

--- a/templates/project/History.html
+++ b/templates/project/History.html
@@ -138,7 +138,8 @@
                     <table>
                         <thead class="notequal-thead">
                             <th> ID </th>
-                            <th> UPDATED DATE </th>
+                            <th> DATE </th>
+                            <th> UPDATED DATE</th>
                             <th> TIME </th>
                             <th> UPDATED TIME </th>
                             <th> TRANSFER </th>
@@ -151,6 +152,7 @@
                         <tr>
                             <td> {{ i.id }}</td>
                             <td> {{ i.date }}</td>
+                            <td> {{ i.updated_date }}</td>
                             <td> {{ i.time }}</td>
                             <td> {{ i.update_time }}</td>
                             <td> {{ i.transfer }}</td>
